gnome-shell (3.8.4-3) UNRELEASED; urgency=low

  * debian/rules:
    + Explicitly enable NetworkManager support on linux. Closes: #725760.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Tue, 08 Oct 2013 17:42:06 +0200

gnome-shell (3.8.4-2) experimental; urgency=low

  * debian/patches/10-make-NetworkManager-optional.patch:
    + Updated from gentoo package for the new version, apply the patch
      again to fix the build on !linux. Closes: #692049.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Sun, 06 Oct 2013 11:38:30 +0200

gnome-shell (3.8.4-1) experimental; urgency=low

  [ Emilio Pozuelo Monfort ]
  * debian/control.in:
    + Add gkbd-capplet back to gnome-shell's recommends. It was dropped
      in 3.7.92-1 but the shell's keyboard layout switcher uses it to
      display the layout in a window.

  [ Jeremy Bicha ]
  * debian/patches/git_relock_screen_after_crash.patch:
    + Backport fix to ensure session is locked after crash
  * debian/control.in:
    - Update homepage
    - Drop obsolete gconf dependency

  [ Emilio Pozuelo Monfort ]
  * New upstream release.

  [ Laurent Bigonville ]
  * debian/control.in: Bump gir1.2-ibus-1.0 dependency to 1.5.2, this is
    needed for the new ibus_bus_new_async() API.
  * debian/control.in: Bump Standards-Version to 3.9.4 (no further changes)
  * debian/gnome-shell.lintian-overrides: Adjust override

 -- Laurent Bigonville <bigon@debian.org>  Sat, 24 Aug 2013 14:52:18 +0200

gnome-shell (3.8.3-1) experimental; urgency=low

  [ Jeremy Bicha ]
  * debian/control.in:
    - Don't recommend gnome-session-fallback

  [ Emilio Pozuelo Monfort ]
  * debian/control.in:
    + Bump minimum gir1.2-gtk-3.0 dependency.
      Thanks to Frederik Himpe <fhimpe@telenet.be>.
  * New upstream release.
  * debian/control.in:
    + Bump build dependencies.
  * debian/patches/series:
    + Disable 30-remoteMenu-Prevent-the-shell-from-becoming-unrespons.patch,
      it conflicts with changes in the new version and may not be necessary